Fix header links and logo gap and alignment

--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,12 @@ body {
 
 .header .logo {
     padding-left: 100px;
-    padding-right: 16px;
+    padding-right: 32px;
+    min-width: 255px;
 }
 
 .header .logo a{
+    min-width: 123px;
     text-decoration: none;
     color:white;
     font-size: 20px;
@@ -39,10 +41,13 @@ body {
 
 .header .links ul {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 16px;
 }
 
 .header .links ul li {
+    min-width: 120px;
     color: white;
     list-style: none;
 }
@@ -116,8 +121,8 @@ body {
 
 .presentation .textbox, .presentation .image{
     height: 300px;
-    min-width: 550px;
     width: 550px;
+    min-width: 500px;
 }
 
 /* -------------------------------------------------------- */
